# Algebra-linear-II

./: .editorconfig  .gitignore  404.html  README.md  index.html  pdf
.github/workflows/: LaTeX-image.yml  julia.yml  latex.yml  linter.yml  main.yml  manim.yml  mtpro2.yml  plots.yml  vuepress-deploy.yml
assets/css/: 0.styles.060f5f89.css  0.styles.248c7b62.css  (+3 more)
aulas/: corpos.html  determinantes.html  espaço-vetorial-LVW.html  espaços-vetoriais-de-dimensão-finita.html  espaços-vetoriais.html  fatoração-única.html  funcionais-lineares.html  index.html  matriz-de-uma-transformação-linear.html  matrizes-e-sistemas-lineares.html  matrizes.html  polinômios.html  reposição.html  sistemas-lineares.html  transformações-lineares.html  using-vue.html
config/: index.html
de/: index.html
docs/: README.md  package.json
en/: index.html
guide/: index.html  using-vue.html
notas/: corpos-e-sistemas lineares.html  corpos.html  determinantes.html  espaço-vetorial-LVW.html  espaços-vetoriais-de-dimensão-finita.html  espaços-vetoriais.html  fatoração-única.html  formas-canônicas-operadores-diagonalizáveis.html  formas-de-jordan.html  formas-de-jordan_parte1.html  formas-de-jordan_parte2.html  funcionais-lineares.html  index.html  matriz-de-uma-transformação-linear.html  matrizes-e-sistemas-lineares.html  matrizes.html  operadores-diagonalizáveis.html  polinômio-minimal.html  polinômio-sobre-um-corpo-F.html  polinômios.html  sistemas-lineares.html  transformações-lineares.html
src/Python/: Basic.py  Test.py  linearalgebra.back  pyproject.toml
videos/: index.html
(+716 files in other folders)
