[tool.poetry]
name = "Algebra-linear-animations"
version = "0.1.0"
description = ""
authors = ["Oromion <caznaranl@uni.pe>"]
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.9"
manim = "^0.2.0"
matplotlib = "^3.3.3"
sympy = "^1.7.1"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
